fix: fix drop menu z-index

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -86,6 +86,7 @@
             overflow: auto;
             transform: translate(-100%, 0);
             transition: 400ms;
+            z-index: 5;
             &._menu-active {
                 transform: translate(0, 0);
             }
